# tekup

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .kilocodemodes  .markdownlint.json  .markdownlintignore  .npmrc  AI_CONTEXT_SUMMARY.md  ANALYSIS_COMPLETE_REPORT.md  BRANCH_STATUS.md  CHANGELOG.md  CHANGELOG_2025-10-23.md  CLAUDE_CODE_BRIEFING.md  CLAUDE_CODE_SETUP_COMPLETE.md  CODEBASE_ANALYSIS.json  CODEBASE_ANALYSIS.md  CODEOWNERS  CONTRIBUTING.md  CURSOR_QUICK_START.md  DATABASE_AFSØGNING_RAPPORT.md  DATABASE_ARCHITECTURE_INDUSTRY_ANALYSIS.md  DATABASE_FULD_ANALYSE_MED_DOKUMENTATION.md  DIFFERENCE_SUMMARY.md  DOCUMENTATION_AUDIT_COMPLETE.md  DOCUMENTATION_UPDATE_2025-10-29.md  FEATURE_ANALYSIS.md  FIX_SUMMARY.md  FRIDAY_AI_CURSOR_READY.md  FRIDAY_AI_MANUS_TO_CURSOR_MIGRATION.md  FRIDAY_AI_MIGRATION_PLAN.md  FRIDAY_AI_V2_MIGRATION_COMPLETE.md  FRONTEND_SENTRY_INSTALLATION_GUIDE.md  GITHUB_ISSUE_MCP_DEPLOYMENT.md  GITHUB_TEKUPDK_ORGANIZATION.md  GIT_ANALYSIS_PC1_2025-10-25.md  GIT_STATUS_REPORT.json  KILO_CODE_ORCHESTRATOR_GUIDE.md  KNOWLEDGE_INDEX.json  (+94 more)
%OUTDIR%/: branches_heads.txt  branches_remotes.txt  describe.txt  ignored_status.txt  log_graph.txt  remote_origin_url.txt  remote_show_origin.txt  remotes.txt  revparse_toplevel.txt  status_porcelain_v2.txt  status_short.txt  untracked.txt
.claude/: context.md  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  SETUP_COMMITLINT.md
.husky/: README.md  pre-commit
.kilocode/: mcp.json
apps/: IMPLEMENTATION-STATUS.md  README-Platforms.md  README.md  TEST-RAPPORT.md  TEST-RESULTATER.md
archive/tekup-gmail-automation-archived-2025-10-22/: .env.example  .gitignore  ARCHIVED.md  CHANGELOG.md  Dockerfile  LICENSE  MIGRATION_NOTICE.md  README.md  TEST_REPORT.md  docker-compose.yml  gmail_mcp_server.py  pyproject.toml  tekup_config.json  tekup_gmail_mcp_server.py  tekup_gmail_mcp_server_real.py
archive/tekup-gmail-automation-archived-2025-10-22/.github/: copilot-instructions.md
archive/tekup-gmail-automation-archived-2025-10-22/.github/workflows/: ci.yml
archive/tekup-gmail-automation-archived-2025-10-22/config/: env.example
archive/tekup-gmail-automation-archived-2025-10-22/docs/: QUICK_START.md  README.md  cursor_continue_the_discussion.md
archive/tekup-gmail-automation-archived-2025-10-22/scripts/: run.bat
archive/tekup-gmail-automation-archived-2025-10-22/src/core/: __init__.py  check_senders.py  gmail_forwarder.py  main_simple.py  main_working.py  scheduler.py
archive/tekup-gmail-automation-archived-2025-10-22/src/integrations/: __init__.py  gmail_economic_forwarder.py
archive/tekup-gmail-automation-archived-2025-10-22/src/processors/: __init__.py  automated_photos_processor.py  find_missing_receipts.py  google_photos_receipt_processor.py  invoice_summary_report.py  smart_photos_processor.py
archive/tekup-gmail-automation-archived-2025-10-22/src/utils/: __init__.py  kontobevaegelser (1).csv  kontobevaegelser (2).csv
archive/tekup-gmail-automation-archived-2025-10-22/tests/: __init__.py
development/: TEKUP_SECRETS_MANAGEMENT_TASK.md
docs/: ANALYTICS_IMPLEMENTATION_COMPLETE.md  CONVENTIONAL_COMMITS.md  DAILY_WORK_LOG_2025-10-23.md  FIX_GITHUB_MCP.md  GITHUB_ORGANIZATION_SETUP_GUIDE.md  LOGGING_MIGRATION.md  MCP_COMPLETE_AUDIT_2025-10-27.md  MCP_DOCKER_MIGRATION_PLAN.md  MCP_PROBLEM_SOLVED_2025-10-27.md  MCP_SUBMODULE_INTEGRATION.md  PHASE_1_PROGRESS_REPORT.md  QUICK_START.md  RELEASE_NOTES_2025-10-27.md  SECURITY_REVOKE_GITHUB_PAT.md  SESSION_REPORT_2025-10-23.md  SYSTEM_ENVIRONMENT_AND_DIRECTORY_STRUCTURE.md  TECH_DEBT_EXECUTION_REPORT.md  TEKUP_COMPLETE_RESTRUCTURE_PLAN.md  TEKUP_COMPLETE_VISION_ANALYSIS.md  TEKUP_DOCUMENTATION_COMPLETE_ANALYSIS_2025-10-27.md  TEKUP_FOLDER_STRUCTURE_PLAN.md  (+5 more)
(+5489 files in other folders)
